spacing and font weights fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,18 @@
   margin: 30px auto;
 
 }
+.scroll-watcher {
+  height: 2px;
+  position:sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: lightcoral;
+  width: 100%;
+  scale: 0 1;
+  animation: scroll-watcher linear;
+  animation-timeline: scroll();
+  transition: width 0.3s;
+}
+@keyframes scroll-watcher{
+  to {scale: 1 1;}
+}
